@@ -2,7 +2,7 @@ Package: libc6-amd64
 Architecture: i386
 Section: libs
 Priority: standard
-Depends: libc6 (= ${Source-Version})
+Depends: libc-bin (>= ${Source-Version})
 Conflicts: amd64-libs (<= 1.2)
 Description: GNU C Library: 64bit Shared libraries for AMD64
  This package includes shared versions of the standard C library and the
@@ -13,7 +13,7 @@ Package: libc6-dev-amd64
 Architecture: i386
 Section: libdevel
 Priority: optional
-Depends: libc6-amd64 (= ${Source-Version}), libc6-dev (= ${Source-Version}), lib64gcc1
+Depends: libc6-amd64 (= ${Source-Version}), libc-dev-bin (>= ${Source-Version}), lib64gcc1
 Replaces: amd64-libs-dev (<= 1.2)
 Provides: lib64c-dev
 Description: GNU C Library: 64bit Development Libraries for AMD64
