@@ -3,7 +3,7 @@ Architecture: kfreebsd-i386 kfreebsd-amd64
 Section: libs
 Priority: required
 Provides: ${locale-compat:Depends}
-Depends: tzdata
+Depends: libc-bin (>= ${Source-Version}), tzdata
 Description: GNU C Library: Shared libraries
  Contains the standard libraries that are used by nearly all programs on
  the system. This package includes shared versions of the standard C library
@@ -13,7 +13,7 @@ Package: libc0.1-dev
 Architecture: kfreebsd-i386 kfreebsd-amd64
 Section: libdevel
 Priority: standard
-Depends: libc0.1 (= ${Source-Version})
+Depends: libc0.1 (= ${Source-Version}), libc-dev-bin (>= ${Source-Version})
 Recommends: gcc | c-compiler
 Description: GNU C Library: Development Libraries and Header Files
  Contains the symlinks, headers, and object files needed to compile
