@@ -15,6 +15,25 @@ Maintainer: GNU Libc Maintainers <debian-glibc@lists.debian.org>
 Uploaders: Ben Collins <bcollins@debian.org>, GOTO Masanori <gotom@debian.org>, Philip Blundell <pb@nexus.co.uk>, Jeff Bailey <jbailey@raspberryginger.com>, Daniel Jacobowitz <dan@debian.org>, Clint Adams <schizo@debian.org>, Denis Barbier <barbier@debian.org>, Aurelien Jarno <aurel32@debian.org>
 Standards-Version: 3.6.2
 
+Package: libc-bin
+Architecture: any
+Section: libs
+Priority: required
+Depends: @libc@ (>= ${Source-Version})
+Replaces: libc0.1, libc0.3, libc6, libc6.1
+Description: GNU C Library: Binaries
+ Contains the binary programs needed by the standard C library.
+
+Package: libc-dev-bin
+Architecture: any
+Section: libdevel
+Priority: required
+Depends: @libc@ (>= ${Source-Version})
+Replaces: libc0.1-dev, libc0.3-dev, libc6-dev, libc6.1-dev
+Description: GNU C Library: Development Binaries
+ Contains the binary programs needed to compile and link programs which 
+ use the standard C library.
+
 Package: @glibc@-doc
 Architecture: all
 Section: doc
@@ -48,6 +67,7 @@ Package: tzdata
 Architecture: all
 Section: libs
 Priority: required
+Depends: libc-bin (>= ${Source-Version})
 Replaces: libc0.1, libc0.3, libc6, libc6.1
 Description: GNU C Library: Timezone data
  This package contains data files with rules for various timezones around
