@@ -2,7 +2,7 @@ Package: libc6-powerpc
 Architecture: ppc64
 Section: libs
 Priority: standard
-Depends: libc6 (= ${Source-Version})
+Depends: libc-bin (>= ${Source-Version})
 Description: GNU C Library: 32bit powerpc shared libraries for ppc64
  This package includes shared versions of the standard C
  library and the standard math library, as well as many others.
@@ -13,7 +13,7 @@ Architecture: ppc64
 Section: libdevel
 Priority: optional
 Provides: lib32c-dev
-Depends: libc6-powerpc (= ${Source-Version}), libc6-dev (= ${Source-Version}), lib32gcc1
+Depends: libc6-powerpc (= ${Source-Version}), libc-dev-bin (= ${Source-Version}), lib32gcc1
 Description: GNU C Library: 32bit powerpc development libraries for ppc64
  Contains the symlinks and object files needed to compile and link programs
  which use the standard C library. This is the 32bit version of the
