@@ -2,7 +2,7 @@ Package: libc6-ppc64
 Architecture: powerpc
 Section: libs
 Priority: standard
-Depends: libc6 (= ${Source-Version})
+Depends: libc-bin (>= ${Source-Version})
 Description: GNU C Library: 64bit Shared libraries for PowerPC64
  This package includes shared versions of the standard C library and the
  standard math library, as well as many others. This is the 64bit version
@@ -13,7 +13,7 @@ Architecture: powerpc
 Section: libdevel
 Priority: optional
 Provides: lib64c-dev
-Depends: libc6-ppc64 (= ${Source-Version}), libc6-dev (= ${Source-Version}), lib64gcc1
+Depends: libc6-ppc64 (= ${Source-Version}), libc-dev-bin (>= ${Source-Version}), lib64gcc1
 Description: GNU C Library: 64bit Development Libraries for PowerPC64
  Contains the symlinks and object files needed to compile and link programs
  which use the standard C library. This is the 64bit version of the
