@@ -2,7 +2,7 @@ Package: libc6-sparc64
 Architecture: sparc
 Section: libs
 Priority: standard
-Depends: libc6 (= ${Source-Version})
+Depends: libc-bin (>= ${Source-Version})
 Conflicts: gcc-3.0 (<< 1:3.0.4ds3-11), libgcc1 (<< 1:3.0.4ds3-11), fakeroot (<< 0.4.5-2.7)
 Description: GNU C Library: 64bit Shared libraries for UltraSPARC
  This package includes shared versions of the standard C library and the
@@ -14,7 +14,7 @@ Architecture: sparc
 Section: libdevel
 Priority: optional
 Provides: lib64c-dev
-Depends: libc6-sparc64 (= ${Source-Version}), libc6-dev (= ${Source-Version}), lib64gcc1
+Depends: libc6-sparc64 (= ${Source-Version}), libc-dev-bin (>= ${Source-Version}), lib64gcc1
 Description: GNU C Library: 64bit Development Libraries for UltraSPARC
  Contains the symlinks and object files needed to compile and link programs
  which use the standard C library. This is the 64bit version of the
