@@ -1,4 +1,3 @@
-log-test-*
 DEB_SRCDIR/BUGS
 DEB_SRCDIR/FAQ
 DEB_SRCDIR/INTERFACE
