@@ -1,0 +1,14 @@
+debian/local/manpages/catchsegv.1
+debian/local/manpages/getent.1
+debian/local/manpages/getconf.1
+debian/local/manpages/iconv.1
+debian/local/manpages/iconvconfig.8
+debian/local/manpages/ldconfig.8
+debian/local/manpages/ldd.1 
+debian/local/manpages/locale.1
+debian/local/manpages/localedef.1
+debian/local/manpages/rpcinfo.8
+debian/local/manpages/tzselect.1
+debian/local/manpages/tzconfig.8
+debian/local/manpages/zdump.1
+debian/local/manpages/zic.8
