@@ -1,2 +1,0 @@
-sys
-etc/init.d
