@@ -1,25 +1,6 @@
 debian/tmp-libc/lib/*.so* lib
 debian/tmp-libc/usr/lib/gconv/*.so usr/lib/gconv
 debian/tmp-libc/usr/lib/gconv/gconv-modules usr/lib/gconv
-debian/tmp-libc/usr/bin/iconv usr/bin
-debian/tmp-libc/usr/bin/locale usr/bin
-debian/tmp-libc/usr/bin/localedef usr/bin
-debian/tmp-libc/usr/bin/getent usr/bin
-debian/tmp-libc/usr/bin/getconf usr/bin
-debian/tmp-libc/usr/bin/catchsegv usr/bin
-debian/tmp-libc/usr/bin/tzselect usr/bin
-debian/tmp-libc/usr/bin/ldd* usr/bin
-debian/tmp-libc/usr/sbin/zdump usr/bin
-debian/tmp-libc/usr/sbin/rpcinfo usr/bin
-
-debian/tmp-libc/usr/sbin/zic usr/sbin
-debian/tmp-libc/usr/sbin/iconvconfig usr/sbin
-
-debian/tmp-libc/sbin/ldconfig sbin
-
-debian/tmp-libc/usr/lib/pt_chown usr/lib
-
-debian/local/usr_sbin/tzconfig usr/sbin
 
 debian/tmp-libc/lib/ldconfig/* lib/ldconfig
 debian/tmp-libc/lib/*-*-gnu/ lib
