@@ -17,23 +17,18 @@ $(stamp)binaryinst_$(libc)-pic:: $(stamp)debhelper
 	install --mode=0644 build-tree/$(DEB_HOST_ARCH)-libc/libresolv.map debian/$(libc)-pic/usr/lib/libresolv_pic.map
 
 # Some per-package extra files to install.
-define $(libc)_extra_debhelper_pkg_install
-	install --mode=0644 $(DEB_SRCDIR)/ChangeLog debian/$(curpass)/usr/share/doc/$(curpass)/changelog
-	install --mode=0644 $(DEB_SRCDIR)/linuxthreads/README debian/$(curpass)/usr/share/doc/$(curpass)/README.linuxthreads
-	install --mode=0644 $(DEB_SRCDIR)/linuxthreads/ChangeLog debian/$(curpass)/usr/share/doc/$(curpass)/ChangeLog.linuxthreads
-	case " $(GLIBC_PASSES) " in \
-	*" nptl "*) \
-	  install --mode=0644 $(DEB_SRCDIR)/nptl/ChangeLog debian/$(curpass)/usr/share/doc/$(curpass)/ChangeLog.nptl; \
-	  ;; \
-	esac
+define libc-bin_debhelper_pkg_install
 	sed -e "/KERNEL_VERSION_CHECK/r debian/script.in/kernelcheck.sh" \
 		debian/local/etc_init.d/glibc.sh | \
 		sed -e "s/EXIT_CHECK/sleep 5/" -e "s/DEB_HOST_ARCH/$(DEB_HOST_ARCH)/" > debian/glibc.sh.generated
 	install --mode=0755 debian/glibc.sh.generated debian/$(curpass)/etc/init.d/glibc.sh
 	# dh_installmanpages thinks that .so is a language.
 	install --mode=0644 debian/local/manpages/ld.so.8 debian/$(curpass)/usr/share/man/man8/ld.so.8
-
 	install --mode=0644 debian/FAQ debian/$(curpass)/usr/share/doc/$(curpass)/README.Debian
+	install --mode=0644 $(DEB_SRCDIR)/ChangeLog debian/$(curpass)/usr/share/doc/$(curpass)/changelog
+	install --mode=0644 $(DEB_SRCDIR)/linuxthreads/README debian/$(curpass)/usr/share/doc/$(curpass)/README.linuxthreads
+	install --mode=0644 $(DEB_SRCDIR)/linuxthreads/ChangeLog debian/$(curpass)/usr/share/doc/$(curpass)/ChangeLog.linuxthreads
+	install --mode=0644 $(DEB_SRCDIR)/nptl/ChangeLog debian/$(curpass)/usr/share/doc/$(curpass)/ChangeLog.nptl 
 endef
 
 define locales_extra_debhelper_pkg_install
@@ -63,9 +58,19 @@ $(patsubst %,$(stamp)binaryinst_%,$(DEB_ARCH_REGULAR_PACKAGES) $(DEB_INDEP_REGUL
 	dh_installman -p$(curpass)
 	dh_installinfo -p$(curpass)
 	dh_installdebconf -p$(curpass)
-	dh_installchangelogs -p$(curpass)
+	case $(curpass) in \
+	  $(libc)*-bin) \
+	    dh_installchangelogs -p$(curpass) ; \
+	    dh_installdocs -p$(curpass) ;; \
+	  $(libc)-dev*) \
+	    dh_link -p$(curpass) usr/share/doc/libc-dev-bin usr/share/doc/$(curpass) ;; \
+	  $(libc)-*) \
+	    dh_link -p$(curpass) usr/share/doc/libc-bin usr/share/doc/$(curpass) ;; \
+	  *) \
+	    dh_installchangelogs -p$(curpass) ; \
+	    dh_installdocs -p$(curpass) ;; \
+	esac
 	dh_installinit -p$(curpass)
-	dh_installdocs -p$(curpass) 
 	dh_link -p$(curpass)
 
 	# extra_debhelper_pkg_install is used for debhelper.mk only.
@@ -176,6 +181,12 @@ $(stamp)debhelper:
 	for x in `find debian/debhelper.in -type f -maxdepth 1`; do \
 	  y=debian/`basename $$x`; \
 	  z=`echo $$y | sed -e 's#/libc#/$(libc)#'`; \
+	  case $$y in \
+	    debian/libc-bin* | debian/libc-dev-bin*) \
+	      z=$$y ;; \
+	    *) \
+	      z=`echo $$y | sed -e 's#/libc#/$(libc)#'` ;; \
+          esac; \
 	  cp $$x $$z; \
 	  sed -e "s#TMPDIR#debian/tmp-libc#" -i $$z; \
 	  sed -e "s#DEB_SRCDIR#$(DEB_SRCDIR)#" -i $$z; \
