@@ -3,6 +3,8 @@ glibc (2.3.6-6) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * Split out timezone data in a separate package. It's a first step, it
     should finally be built from a separate source package.
+  * Split out binaries from libc6 into libc-bin, and binaries from libc6-bin
+    into libc-bin-dev.  (Closes: #330735)
 
   [ Denis Barbier ]
   * debian/debhelper.in/locales.config: /etc/locale.gen was not generated at
